--- a/package.json
+++ b/package.json
@@ -29,6 +29,12 @@
     "@coreui/react": "^4.9.0-rc.0",
     "@coreui/react-chartjs": "^2.1.3",
     "@coreui/utils": "^2.0.2",
+    "@popperjs/core": "^2.11.8",
+    "@tanstack/react-table": "^8.9.3",
+    "ag-grid-community": "^30.0.3",
+    "ag-grid-react": "^30.0.4",
+    "axios": "^1.4.0",
+    "bootstrap-icons": "^1.10.5",
     "chart.js": "^3.9.1",
     "classnames": "^2.3.2",
     "core-js": "^3.31.0",
@@ -36,13 +42,18 @@
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.1",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.10.1",
+    "react-modal": "^3.16.1",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.0",
-    "react-table": "^7.8.0",
+    "react-select": "^5.7.4",
     "redux": "4.2.1",
     "simplebar-react": "^2.4.3"
   },
   "devDependencies": {
+    "@hookform/devtools": "^4.3.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
