--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@coreui/react": "^4.9.0-rc.0",
     "@coreui/react-chartjs": "^2.1.3",
     "@coreui/utils": "^2.0.2",
+    "@hookform/resolvers": "^3.1.1",
     "@popperjs/core": "^2.11.8",
     "@tanstack/react-table": "^8.9.3",
     "ag-grid-community": "^30.0.3",
@@ -50,7 +51,8 @@
     "react-router-dom": "^6.14.0",
     "react-select": "^5.7.4",
     "redux": "4.2.1",
-    "simplebar-react": "^2.4.3"
+    "simplebar-react": "^2.4.3",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@hookform/devtools": "^4.3.1",
