--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@coreui/utils": "^2.0.2",
     "@hookform/resolvers": "^3.1.1",
     "@popperjs/core": "^2.11.8",
+    "@tanstack/react-query": "^4.33.0",
+    "@tanstack/react-query-devtools": "^4.33.0",
     "@tanstack/react-table": "^8.9.3",
     "ag-grid-community": "^30.0.3",
     "ag-grid-react": "^30.0.4",
