--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-select": "^5.7.4",
     "redux": "4.2.1",
     "simplebar-react": "^2.4.3",
+    "vercel": "^32.2.4",
     "yup": "^1.2.0"
   },
   "devDependencies": {
